@@ -208,8 +208,8 @@ different namespace aliases for the same element."
              ;; the target namespace.
              (unless (equal target-ns (cdr tns))
                (soap-warning
-		"soap-extract-xmlns(%s): tns alias and targetNamespace mismatch"
-		(xml-node-name node))))
+                "soap-extract-xmlns(%s): tns alias and targetNamespace mismatch"
+                (xml-node-name node))))
             ((and tns (not target-ns))
              (setq target-ns (cdr tns)))
             ((and (not tns) target-ns)
@@ -250,7 +250,7 @@ namespace tag."
                    ;; skip nodes for which we cannot convert them to a
                    ;; well-known name.
                    (eq (ignore-errors (soap-l2wk (xml-node-name c)))
-		       child-name)))
+                       child-name)))
         (push c result)))
     (nreverse result)))
 
@@ -354,8 +354,8 @@ binding) but the same name."
           ((= (length elements) 1) (car elements))
           ((> (length elements) 1)
            (error
-	    "Soap-namespace-get(%s): multiple elements, discriminant needed"
-	    name))
+            "Soap-namespace-get(%s): multiple elements, discriminant needed"
+            name))
           (t
            nil))))
 
@@ -402,7 +402,7 @@ binding) but the same name."
   operation                             ; SOAP-OPERATION
   soap-action                           ; value for SOAPAction HTTP header
   use                                   ; 'literal or 'encoded, see
-					; http://www.w3.org/TR/wsdl#_soap:body
+                                        ; http://www.w3.org/TR/wsdl#_soap:body
   )
 
 (defstruct (soap-binding (:include soap-element))
@@ -416,7 +416,7 @@ binding) but the same name."
 (defun soap-default-xsd-types ()
   "Return a namespace containing some of the XMLSchema types."
   (let ((ns (make-soap-namespace :name "http://www.w3.org/2001/XMLSchema")))
-    (dolist (type '("string" "dateTime" "boolean" 
+    (dolist (type '("string" "dateTime" "boolean"
                     "long" "int" "integer" "unsignedInt" "byte" "float" "double"
                     "base64Binary" "anyType" "anyURI" "Array" "byte[]"))
       (soap-namespace-put
@@ -427,8 +427,8 @@ binding) but the same name."
 (defun soap-default-soapenc-types ()
   "Return a namespace containing some of the SOAPEnc types."
   (let ((ns (make-soap-namespace
-	     :name "http://schemas.xmlsoap.org/soap/encoding/")))
-    (dolist (type '("string" "dateTime" "boolean" 
+             :name "http://schemas.xmlsoap.org/soap/encoding/")))
+    (dolist (type '("string" "dateTime" "boolean"
                     "long" "int" "integer" "unsignedInt" "byte" "float" "double"
                     "base64Binary" "anyType" "anyURI" "Array" "byte[]"))
       (soap-namespace-put
@@ -514,13 +514,13 @@ used to resolve the namespace alias."
                   (ns-name (cdr (assoc ns-alias alias-table))))
              (unless ns-name
                (error "Soap-wsdl-get(%s): cannot find namespace alias %s"
-		      name ns-alias))
+                      name ns-alias))
 
              (setq namespace (soap-wsdl-find-namespace ns-name wsdl))
              (unless namespace
                (error
-		"Soap-wsdl-get(%s): unknown namespace %s, referenced by alias %s"
-		name ns-name ns-alias))))
+                "Soap-wsdl-get(%s): unknown namespace %s, referenced by alias %s"
+                name ns-name ns-alias))))
           (t
            (error "Soap-wsdl-get(%s): bad name" name)))
 
@@ -564,7 +564,7 @@ updated."
   (let ((kind (soap-basic-type-kind type)))
     (unless (symbolp kind)
       (let ((basic-type (soap-wsdl-get kind wsdl 'soap-basic-type-p)))
-        (setf (soap-basic-type-kind type) 
+        (setf (soap-basic-type-kind type)
               (soap-basic-type-kind basic-type))))))
 
 (defun soap-resolve-references-for-sequence-type (type wsdl)
@@ -574,12 +574,18 @@ See also `soap-resolve-references-for-element' and
   (let ((parent (soap-sequence-type-parent type)))
     (when (or (consp parent) (stringp parent))
       (setf (soap-sequence-type-parent type)
-            (soap-wsdl-get parent wsdl 'soap-type-p))))
+            (soap-wsdl-get
+             parent wsdl
+             ;; Prevent self references, see Bug#9
+             (lambda (e) (and (not (eq e type)) (soap-type-p e)))))))
   (dolist (element (soap-sequence-type-elements type))
     (let ((element-type (soap-sequence-element-type element)))
       (cond ((or (consp element-type) (stringp element-type))
              (setf (soap-sequence-element-type element)
-                   (soap-wsdl-get element-type wsdl 'soap-type-p)))
+                   (soap-wsdl-get
+                    element-type wsdl
+                    ;; Prevent self references, see Bug#9
+                    (lambda (e) (and (not (eq e type)) (soap-type-p e))))))
             ((soap-element-p element-type)
              ;; since the element already has a child element, it
              ;; could be an inline structure.  we must resolve
@@ -594,7 +600,10 @@ See also `soap-resolve-references-for-element' and
   (let ((element-type (soap-array-type-element-type type)))
     (when (or (consp element-type) (stringp element-type))
       (setf (soap-array-type-element-type type)
-            (soap-wsdl-get element-type wsdl 'soap-type-p)))))
+            (soap-wsdl-get
+             element-type wsdl
+             ;; Prevent self references, see Bug#9
+             (lambda (e) (and (not (eq e type)) (soap-type-p e))))))))
 
 (defun soap-resolve-references-for-message (message wsdl)
   "Resolve references for a MESSAGE type using the WSDL document.
@@ -625,7 +634,7 @@ See also `soap-resolve-references-for-element' and
       (when (or (consp message) (stringp message))
         (setf (soap-operation-input operation)
               (cons (intern name)
-		    (soap-wsdl-get message wsdl 'soap-message-p))))))
+                    (soap-wsdl-get message wsdl 'soap-message-p))))))
 
   (let ((output (soap-operation-output operation))
         (counter 0))
@@ -636,7 +645,7 @@ See also `soap-resolve-references-for-element' and
       (when (or (consp message) (stringp message))
         (setf (soap-operation-output operation)
               (cons (intern name)
-		    (soap-wsdl-get message wsdl 'soap-message-p))))))
+                    (soap-wsdl-get message wsdl 'soap-message-p))))))
 
   (let ((resolved-faults nil)
         (counter 0))
@@ -647,7 +656,7 @@ See also `soap-resolve-references-for-element' and
           (setq name (format "fault%d" (incf counter))))
         (if (or (consp message) (stringp message))
             (push (cons (intern name)
-			(soap-wsdl-get message wsdl 'soap-message-p))
+                        (soap-wsdl-get message wsdl 'soap-message-p))
                   resolved-faults)
             (push fault resolved-faults))))
     (setf (soap-operation-faults operation) resolved-faults))
@@ -672,7 +681,7 @@ See also `soap-resolve-references-for-element' and
             (stringp (soap-binding-port-type binding)))
     (setf (soap-binding-port-type binding)
           (soap-wsdl-get (soap-binding-port-type binding)
-			 wsdl 'soap-port-type-p)))
+                         wsdl 'soap-port-type-p)))
 
   (let ((port-ops (soap-port-type-operations (soap-binding-port-type binding))))
     (maphash (lambda (k v)
@@ -835,7 +844,7 @@ calls."
           (let ((port-type (soap-parse-port-type node)))
             (soap-namespace-put port-type ns)
             (soap-wsdl-add-namespace
-	     (soap-port-type-operations port-type) wsdl)))
+             (soap-port-type-operations port-type) wsdl)))
 
         (dolist (node (soap-xml-get-children1 node 'wsdl:binding))
           (soap-namespace-put (soap-parse-binding node) ns))
@@ -845,11 +854,11 @@ calls."
             (let ((name (xml-get-attribute node 'name))
                   (binding (xml-get-attribute node 'binding))
                   (url (let ((n (car (soap-xml-get-children1
-				      node 'wsdlsoap:address))))
+                                      node 'wsdlsoap:address))))
                          (xml-get-attribute n 'location))))
               (let ((port (make-soap-port
                            :name name :binding (soap-l2fq binding 'tns)
-			   :service-url url)))
+                           :service-url url)))
                 (soap-namespace-put port ns)
                 (push port (soap-wsdl-ports wsdl))))))
 
@@ -898,7 +907,7 @@ Return a SOAP-NAMESPACE containing the elements."
     (setq type (xml-get-attribute-or-nil restriction 'base))
     (dolist (e (soap-xml-get-children1 restriction 'xsd:enumeration))
       (push (xml-get-attribute e 'value) enumeration))
-      
+
     (make-soap-simple-type :name name :kind type :enumeration enumeration)))
 
 (defun soap-parse-schema-element (node)
@@ -914,7 +923,7 @@ Return a SOAP-NAMESPACE containing the elements."
     (let ((type-node (soap-xml-get-children1 node 'xsd:complexType)))
       (when (> (length type-node) 0)
         (assert (= (length type-node) 1)) ; only one complex type
-					  ; definition per element
+                                          ; definition per element
         (setq type (soap-parse-complex-type (car type-node)))))
     (setf (soap-element-name type) name)
     type))
@@ -937,7 +946,7 @@ Return a SOAP-NAMESPACE containing the elements."
             ;; The difference between xsd:all and xsd:sequence is that fields
             ;; in xsd:all are not ordered and they can occur only once.  We
             ;; don't care about that difference in soap-client.el
-            ((or (eq node-name 'xsd:sequence) 
+            ((or (eq node-name 'xsd:sequence)
                  (eq node-name 'xsd:all))
              (setq type (soap-parse-complex-type-sequence c)))
             ((eq node-name 'xsd:complexContent)
@@ -985,7 +994,7 @@ A list of these types is returned."
 
         (push (make-soap-sequence-element
                :name (intern name) :type type :nillable? nillable?
-	       :multiple? multiple?)
+               :multiple? multiple?)
               elements)))
     (nreverse elements)))
 
@@ -1005,13 +1014,13 @@ contents."
   (let (array? parent elements)
     (let ((extension (car-safe (soap-xml-get-children1 node 'xsd:extension)))
           (restriction (car-safe
-			(soap-xml-get-children1 node 'xsd:restriction))))
+                        (soap-xml-get-children1 node 'xsd:restriction))))
       ;; a complex content node is either an extension or a restriction
       (cond (extension
              (setq parent (xml-get-attribute-or-nil extension 'base))
              (setq elements (soap-parse-sequence
                              (car (soap-xml-get-children1
-				   extension 'xsd:sequence)))))
+                                   extension 'xsd:sequence)))))
             (restriction
              (let ((base (xml-get-attribute-or-nil restriction 'base)))
                (assert (equal base (soap-wk2l "soapenc:Array"))
@@ -1020,9 +1029,9 @@ contents."
                        base))
              (setq array? t)
              (let ((attribute (car (soap-xml-get-children1
-				    restriction 'xsd:attribute))))
+                                    restriction 'xsd:attribute))))
                (let ((array-type (soap-xml-get-attribute-or-nil1
-				  attribute 'wsdl:arrayType)))
+                                  attribute 'wsdl:arrayType)))
                  (when (string-match "^\\(.*\\)\\[\\]$" array-type)
                    (setq parent (match-string 1 array-type))))))
 
@@ -1070,12 +1079,12 @@ contents."
       (let ((o (soap-parse-operation node)))
 
         (let ((other-operation (soap-namespace-get
-				(soap-element-name o) ns 'soap-operation-p)))
+                                (soap-element-name o) ns 'soap-operation-p)))
           (if other-operation
               ;; Unfortunately, the Confluence WSDL defines two operations
               ;; named "search" which differ only in parameter names...
               (soap-warning "Discarding duplicate operation: %s"
-			    (soap-element-name o))
+                            (soap-element-name o))
 
               (progn
                 (soap-namespace-put o ns)
@@ -1105,7 +1114,7 @@ contents."
           (soap-l2wk (xml-node-name node)))
   (let ((name (xml-get-attribute node 'name))
         (parameter-order (split-string
-			  (xml-get-attribute node 'parameterOrder)))
+                          (xml-get-attribute node 'parameterOrder)))
         input output faults)
     (dolist (n (xml-node-children node))
       (when (consp n)                 ; skip string nodes which are whitespace
@@ -1139,7 +1148,7 @@ contents."
   (let ((name (xml-get-attribute node 'name))
         (type (xml-get-attribute node 'type)))
     (let ((binding (make-soap-binding :name name
-				      :port-type (soap-l2fq type 'tns))))
+                                      :port-type (soap-l2fq type 'tns))))
       (dolist (wo (soap-xml-get-children1 node 'wsdl:operation))
         (let ((name (xml-get-attribute wo 'name))
               soap-action
@@ -1219,7 +1228,7 @@ decode function to perform the actual decoding."
                  nil
                  (let ((decoder (get (aref type 0) 'soap-decoder)))
                    (assert decoder nil "no soap-decoder for %s type"
-			   (aref type 0))
+                           (aref type 0))
                    (funcall decoder type node))))))))
 
 (defun soap-decode-any-type (node)
@@ -1362,13 +1371,16 @@ WSDL is used to decode the NODE"
       (let ((fault (car (soap-xml-get-children1 body 'soap:Fault))))
         (when fault
           (let ((fault-code (let ((n (car (xml-get-children
-					   fault 'faultcode))))
+                                           fault 'faultcode))))
                               (car-safe (xml-node-children n))))
                 (fault-string (let ((n (car (xml-get-children
-					     fault 'faultstring))))
-                                (car-safe (xml-node-children n)))))
+                                             fault 'faultstring))))
+                                (car-safe (xml-node-children n))))
+                (detail (let ((n (car (xml-get-children
+                                       fault 'detail))))
+                          (car-safe (xml-node-children n)))))
           (while t
-            (signal 'soap-error (list fault-code fault-string))))))
+            (signal 'soap-error (list fault-code fault-string detail))))))
 
       ;; First (non string) element of the body is the root node of he
       ;; response
@@ -1401,7 +1413,7 @@ reference multiRef parts which are external to RESPONSE-NODE."
       (when (eq use 'encoded)
         (let* ((received-message-name (soap-l2fq (xml-node-name response-node)))
                (received-message (soap-wsdl-get
-				  received-message-name wsdl 'soap-message-p)))
+                                  received-message-name wsdl 'soap-message-p)))
           (unless (eq received-message message)
             (error "Unexpected message: got %s, expecting %s"
                    received-message-name
@@ -1425,14 +1437,14 @@ reference multiRef parts which are external to RESPONSE-NODE."
                      (catch 'found
                        (let* ((ns-aliases (soap-wsdl-alias-table wsdl))
                               (ns-name (cdr (assoc
-					     (soap-element-namespace-tag type)
-					     ns-aliases)))
+                                             (soap-element-namespace-tag type)
+                                             ns-aliases)))
                               (fqname (cons ns-name (soap-element-name type))))
                          (dolist (c (xml-node-children response-node))
                            (when (consp c)
                              (soap-with-local-xmlns c
                                (when (equal (soap-l2fq (xml-node-name c))
-					    fqname)
+                                            fqname)
                                  (throw 'found c))))))))))
 
             (unless node
@@ -1488,8 +1500,8 @@ instead."
              (setq xsi-type "xsd:boolean" basic-type 'boolean))
             (t
              (error
-	      "Soap-encode-basic-type(%s, %s, %s): cannot classify anyType value"
-	      xml-tag value xsi-type))))
+              "Soap-encode-basic-type(%s, %s, %s): cannot classify anyType value"
+              xml-tag value xsi-type))))
 
     (insert "<" xml-tag " xsi:type=\"" xsi-type "\"")
 
@@ -1518,8 +1530,8 @@ instead."
                     (insert (url-insert-entities-in-string value)))
                    (t
                     (error
-		     "Soap-encode-basic-type(%s, %s, %s): not a dateTime value"
-		     xml-tag value xsi-type))))
+                     "Soap-encode-basic-type(%s, %s, %s): not a dateTime value"
+                     xml-tag value xsi-type))))
 
             (boolean
              (unless (memq value '(t nil))
@@ -1550,8 +1562,8 @@ instead."
 
             (otherwise
              (error
-	      "Soap-encode-basic-type(%s, %s, %s): don't know how to encode"
-	      xml-tag value xsi-type))))
+              "Soap-encode-basic-type(%s, %s, %s): don't know how to encode"
+              xml-tag value xsi-type))))
 
         (insert " xsi:nil=\"true\">"))
     (insert "</" xml-tag ">\n")))
@@ -1600,13 +1612,13 @@ instead."
                   (cond ((and (= instance-count 0)
                               (not (soap-sequence-element-nillable? element)))
                          (soap-warning
-			  "While encoding %s: missing non-nillable slot %s"
-			  (soap-element-name type) e-name))
+                          "While encoding %s: missing non-nillable slot %s"
+                          (soap-element-name type) e-name))
                         ((and (> instance-count 1)
                               (not (soap-sequence-element-multiple? element)))
                          (soap-warning
-			  "While encoding %s: multiple slots named %s"
-			  (soap-element-name type) e-name))))))))
+                          "While encoding %s: multiple slots named %s"
+                          (soap-element-name type) e-name))))))))
         (insert " xsi:nil=\"true\">"))
     (insert "</" xml-tag ">\n")))
 
@@ -1680,7 +1692,7 @@ document."
               (when (re-search-forward " ")
                 (let* ((ns (soap-element-namespace-tag type))
                        (namespace (cdr (assoc ns
-					      (soap-wsdl-alias-table wsdl)))))
+                                              (soap-wsdl-alias-table wsdl)))))
                   (when namespace
                     (insert "xmlns=\"" namespace "\" ")))))))))
 
@@ -1750,7 +1762,7 @@ operations in a WSDL document."
 
     (let* ((binding (soap-port-binding port))
            (operation (gethash operation-name
-			       (soap-binding-operations binding))))
+                               (soap-binding-operations binding))))
       (unless operation
         (error "No operation %s for SOAP service %s" operation-name service))
 
@@ -1764,12 +1776,12 @@ operations in a WSDL document."
             (url-http-attempt-keepalives t)
             (url-request-extra-headers (list
                                         (cons "SOAPAction"
-					      (soap-bound-operation-soap-action
-					       operation))
+                                              (soap-bound-operation-soap-action
+                                               operation))
                                         (cons "Content-Type"
-					      "text/xml; charset=utf-8"))))
+                                              "text/xml; charset=utf-8"))))
         (let ((buffer (url-retrieve-synchronously
-		       (soap-port-service-url port))))
+                       (soap-port-service-url port))))
           (condition-case err
               (with-current-buffer buffer
                 (declare (special url-http-response-status))
@@ -1780,11 +1792,11 @@ operations in a WSDL document."
                     ;; back with a HTTP response 500 (internal server
                     ;; error)
                     (warn "Error in SOAP response: HTTP code %s"
-			  url-http-response-status))
+                          url-http-response-status))
                                  (when (> (buffer-size) 1000000)
                                    (soap-warning
-				    "Received large message: %s bytes"
-				    (buffer-size)))
+                                    "Received large message: %s bytes"
+                                    (buffer-size)))
                 (let ((mime-part (mm-dissect-buffer t t)))
                   (unless mime-part
                     (error "Failed to decode response from server"))
@@ -1793,7 +1805,7 @@ operations in a WSDL document."
                   (with-temp-buffer
                     (mm-insert-part mime-part)
                     (let ((response (car (xml-parse-region
-					  (point-min) (point-max)))))
+                                          (point-min) (point-max)))))
                       (prog1
                           (soap-parse-envelope response operation wsdl)
                         (kill-buffer buffer)
