@@ -1,3 +1,11 @@
+2011-12-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-client.el (soap-resolve-references-for-sequence-type)
+	(soap-resolve-references-for-array-type): hack to prevent self
+	references, see Bug#9.
+	(soap-parse-envelope): report the contents of the 'detail' node
+	when receiving a fault reply.
+
 2011-12-21  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-inspect.el (soap-sample-value-for-simple-type)
